# CS2205-Lexer

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  custom_lexer_dfa.dot  dfa_graph.dot  gen_testcases.py  lang.l  lexer_dfa.dot  nfa_graph.dot  regex_automata  run_tests.sh  test_correctness.sh  verify_dot.py
(9+l)*s(f?|w*)?a/: dfa_graph.dot  min_dfa_graph.dot  nfa_graph.dot
0k|(1s)?o|(f*|x(v7?|s?)*a?)k|(t(b|j|1|l)?|(6l|g+)*)*/: dfa_graph.dot  min_dfa_graph.dot  nfa_graph.dot
_codeql_build_dir/: regex_automata
a\nb/: dfa_graph.dot  min_dfa_graph.dot  nfa_graph.dot
h(a(4|f?g+)(n+qq+))+((i|h|r?|w)?(2+2*)r*r+)b(b?|8d)?/: dfa_graph.dot  min_dfa_graph.dot  nfa_graph.dot
src/: dfa.h  dfa_converter.cpp  dfa_minimizer.cpp  infix_to_postfix.cpp  lexer.cpp  lexer.h  main.cpp  nfa.h  nfa_builder.cpp  nfa_dfa_builder.h  regex_parser.h  regex_preprocessor.cpp  regex_simplifier.cpp  regex_simplifier.h  visualize.cpp
tests/: gen_testcases.py  run_tests.sh  test_cases.txt  test_cases0.txt  test_cases1.txt  test_cases2.txt  test_cases3.txt  test_cases4.txt  test_cases5.txt  test_cases6.txt  test_cases7.txt  test_cases8.txt  test_cases9.txt  test_correctness.sh  test_custom_lexer.py  test_lexer.py  verify_dot.py
tests/custom_cases/: example1.yaml  example2.yaml  example3.yaml  example4.yaml  example5.yaml  example6.yaml  longest_match_priority.yaml  random1.yaml  random2.yaml  same_length_order.yaml
tests/lexer_cases/: basic.txt  edge_cases.txt  mixed.txt  mixed1.txt  mixed2.txt  mixed3.txt  mixed4.txt  numbers.txt  (+1 more)
x|(1h*(w+5)+)*q6/: dfa_graph.dot  nfa_graph.dot
(+7 files in other folders)
